# BenchmarkingTutorial

./: .gitignore  CMakeLists.txt  README.md  less_slow.cpp  main.cxx  results_epyc2x16core.json  results_proripper64core_o1.json  tutorial.cxx
assets/: benchmarks_epyc2x16core_o3.json  benchmarks_proripper64core_o1.json  benchmarks_proripper64core_o3.json  presentation.md
slides/: presentation.md
